<resources>
    <string name="app_name">GoogleMapDemo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="main_btn_map">Map 相关</string>
    <string name="main_btn_client">GoogleApiClient</string>
    <string name="main_btn_start_activity">startActivity方式</string>
    <string name="main_btn_places">Places</string>
    <string name="main_btn_web_api">Web API</string>
    <string name="main_btn_nearby_demo">实战：附近地点推荐</string>

    <string name="map_btn_switch_location_layout">定位图层</string>
    <string name="map_btn_switch_location">定位按钮</string>
    <string name="map_btn_switch_zoom_controls">缩放按钮</string>
    <string name="map_btn_switch_zoom_gestures">手势缩放</string>
    <string name="map_btn_switch_scroll_gestures">手势平移</string>
    <string name="map_btn_switch_compass">指针按钮</string>
    <string name="map_btn_switch_rotate">手势旋转</string>
    <string name="map_btn_marker_add">增加标注</string>
    <string name="map_btn_marker_clear">清除标注</string>
    <string name="map_btn_camera_listener">摄像头监听</string>
    <string name="map_btn_click_listener">点击事件监听</string>
    <string name="map_btn_take_snapshot">快照</string>

    <string name="map_btn_open_tip">打开</string>
    <string name="map_btn_close_tip">关闭</string>

    <string name="map_switch_location_listener_tip">点击了点位按钮</string>
    <string name="map_camera_center_location">摄像头中心位置</string>
    <string name="map_camera_idle_tip">摄像头停止了哈，当前中心位置是：\n纬度：%1$f，\n经度：%2$f</string>
    <string name="map_click_tip">点击的坐标，\n纬度：%1$f，\n经度：%2$f</string>
    <string name="map_long_click_tip">长按的坐标，\n纬度：%1$f，\n经度：%2$f</string>
    <string name="map_place_click_tip">点击的景点信息为：\n名称：%1$s，\nPlace ID:%2$s，\n纬度：%3$f，\n经度：%4$f</string>
    <string name="map_take_snapshot_finish_tip">我获取到了快照截图的bitmap啦</string>

    <string name="client_btn_current_latlng">获取当前定位的经纬度坐标</string>
    <string name="client_btn_nearby_places">根据经纬度获取附近地点</string>
    <string name="client_current_latlng">当前定位的\n纬度：%1$f，经度：%2$f</string>
    <string name="client_current_latlng_failed">获取当前位置失败</string>
    <string name="client_nearby_by_latlng_start">开始获取如下位置的附近地点：\n纬度：%1$f，\n经度：%2$f\n\n</string>
    <string name="client_nearby_by_latlng_error">获取附近地点失败</string>
    <string name="client_text_hint">这里会显示状态信息哦</string>
    <string name="client_text_loading">正在获取数据，请稍后</string>
    <string name="client_connect_failed">google client 尚未连接成功</string>
    <string name="cilent_permission_failed">用户未授予定位权限</string>
    <string name="client_nearby_by_latlng_result_hint">结果如下：\n</string>
    
    <string name="start_by_activity_btn_search_place">搜索地点</string>
    <string name="start_by_activity_btn_navigation">导航</string>
    <string name="start_by_activity_btn_nearby_places">附近地点</string>
    <string name="start_by_activity_btn_search_place_result">我在这里获取了搜索结果：\n%1$s</string>

    <string name="google_map_no_installed">您尚未安装谷歌地图</string>
    <string name="places_btn_current_places">获取当前位置及附近地点</string>
    <string name="places_btn_get_place_by_place_id">通过placeId获取位置信息</string>
    <string name="places_text_current_places">当前位置附近地点信息如下：\n%1$s</string>
    <string name="places_btn_get_place_by_place_id_result">通过placeId找到对应的地点是：\n%1$s</string>
    <string name="places_no_data">没有获取到数据</string>

    <string name="web_btn_get_city_by_latlng">根据坐标获取所在城市</string>
    <string name="web_btn_nearby_places">根据经纬度获取附近地点</string>

    <string name="web_btn_get_city_by_latlng_result">当前定位的城市为：\n%1$s</string>
    <string name="web_btn_nearby_places_result">附近地点信息如下：\n%1$s</string>

    <string name="nearby_places_choose_loaction_tip">尚未选中位置</string>

    <string name="nearby_places_title_send">发送</string>
    <string name="nearby_places_send_result">我已经拿到placeBean和bitmap了</string>

    <string name="dialog_gps_title">GPS开关</string>
    <string name="dialog_gps_msg">请打开GPS开关，确保正确定位</string>

    <string name="chat_location_check_gps_settings_error">GPS设置未开启，定位功能将受到影响</string>
    <string name="chat_location_gps_doing_tip">正在定位中，请稍候...</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="geocode_task_error">数据获取错误</string>
</resources>
