<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_current_places"
        android:text="@string/places_btn_current_places"
        style="@style/NormalBtnStyle"/>

    <Button
        android:id="@+id/btn_get_place_by_place_id"
        android:text="@string/places_btn_get_place_by_place_id"
        style="@style/NormalBtnStyle"/>

    <TextView
        android:id="@+id/text_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/client_text_hint"
        android:gravity="center"
        android:padding="20dp"/>


</LinearLayout>